# docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "\n## How to use the API\n1- Click which endpoint you want to use.\n2- Click \"Try it out\" button.\n3- Add your request body or your parameters which are showed and required by the endpoint.\n4- Click \"Execute\" button.\n5- You will see the response.\n\nSome endpoints require authentication. In this case, you need to log in first.\nI created two types of users for this project: admin and regular user.\nJust send a POST request as below at [here](http://localhost:3000/swagger/index.html).\nAfter login, you will get a JWT token in cookies.\nIf you're using cookie-based auth, the cookie will be sent automatically.\nAlternatively, you can use Bearer Token authentication via the \"Authorize\" button.\n\n### Login Request For Admin\n```json\n{\n\"email\": \"admin@admin.com\",\n\"password\": \"admin123\"\n}\n```\n\n### Login Request For User\n```json\n{\n\"email\": \"user@user.com\",\n\"password\": \"user1234\"\n}\n```\n\n## Error Handling\nAll error responses will follow this JSON format:\n\n```json\n{\n\"message\": string,\n\"code\": int\n}\n```\n### Example\n```json\n{\n\"message\": \"invalid request\",\n\"code\": 400\n}\n```\nPlease Handle errors accordingly on the client side.\nThe API returns an error which is according to a language at some endpoints.\nFor example, if you send a request to an anonymous user endpoint, the API will return an error in a specific language.\nIn this case, you need to specify the language in the request header as `accept-language`.\nI will specify which endpoints require that header.\n\nIf you send a request to an admin endpoint, the API will return an error in Turkish.\n\n## Reminder\nI did not use `/api` prefix for the endpoint routes. Because I love to host my API on \"api\" subdomain.\nStatus code with `2xx` is a success code.\nStatus code with `4xx` is a client error code.\nStatus code with `5xx` is a server error code.",
+        "description": "\n## How to use the API\n1- Click which endpoint you want to use.\n2- Click \"Try it out\" button.\n3- Add your request body or your parameters which are showed and required by the endpoint.\n4- Click \"Execute\" button.\n5- You will see the response.\n\nSome endpoints require authentication. In this case, you need to log in first.\nI created two types of users for this project: admin and regular user.\nJust send a POST request as below at [here](http://localhost:3000/swagger/index.html/).\nAfter login, you will get a JWT token in cookies.\nIf you're using cookie-based auth, the cookie will be sent automatically.\nAlternatively, you can use Bearer Token authentication via the \"Authorize\" button.\n\n### Login Request For Admin\n```json\n{\n\"email\": \"admin@admin.com\",\n\"password\": \"admin123\"\n}\n```\n\n### Login Request For User\n```json\n{\n\"email\": \"user@user.com\",\n\"password\": \"user1234\"\n}\n```\n\n## Error Handling\nAll error responses will follow this JSON format:\n\n```json\n{\n\"message\": string,\n\"code\": int\n}\n```\n### Example\n```json\n{\n\"message\": \"invalid request\",\n\"code\": 400\n}\n```\n\n## Reminder\nI did not use `/api` prefix for the endpoint routes. Because I love to host my API on \"api\" subdomain.\nStatus code with `2xx` is a success code.\nStatus code with `4xx` is a client error code.\nStatus code with `5xx` is a server error code.",
         "title": "Advanced Todo API",
         "contact": {},
         "version": "1.0"
@@ -22,7 +22,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "3- User"
+                    "User"
                 ],
                 "summary": "Get users for admin",
                 "parameters": [
@@ -75,7 +75,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "3- User"
+                    "User"
                 ],
                 "summary": "Get user details by ID for admin",
                 "parameters": [
@@ -113,21 +113,15 @@
                     "application/json"
                 ],
                 "tags": [
-                    "1- Healthcheck"
+                    "Healthcheck"
                 ],
                 "summary": "Healthcheck",
                 "responses": {
                     "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/healthcheck.HealthcheckResponse"
-                        }
+                        "description": "OK"
                     },
                     "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/domain.Error"
-                        }
+                        "description": "Internal Server Error"
                     }
                 }
             }
@@ -142,22 +136,10 @@
                     "application/json"
                 ],
                 "tags": [
-                    "2- Auth"
+                    "Autg"
                 ],
                 "summary": "Login",
                 "parameters": [
-                    {
-                        "enum": [
-                            "tr",
-                            "ar",
-                            "en"
-                        ],
-                        "type": "string",
-                        "description": "Response Language",
-                        "name": "response-language",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "description": "Login Request",
                         "name": "request",
@@ -197,7 +179,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "2- Auth"
+                    "Autg"
                 ],
                 "summary": "Signup",
                 "parameters": [
@@ -245,7 +227,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "todos"
+                    "Todo"
                 ],
                 "summary": "Get all todos",
                 "responses": {
@@ -280,7 +262,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "todos"
+                    "Todo"
                 ],
                 "summary": "Create a new todo",
                 "parameters": [
@@ -325,7 +307,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "todos"
+                    "Todo"
                 ],
                 "summary": "Get a todo by ID",
                 "parameters": [
@@ -372,7 +354,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "todos"
+                    "Todo"
                 ],
                 "summary": "Update an existing todo",
                 "parameters": [
@@ -425,7 +407,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "todos"
+                    "Todo"
                 ],
                 "summary": "Delete a todo",
                 "parameters": [
@@ -463,7 +445,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "todos"
+                    "Todo"
                 ],
                 "summary": "Toggle todo completion status",
                 "parameters": [
@@ -503,22 +485,9 @@
                 ],
                 "description": "Delete a user's account",
                 "tags": [
-                    "3- User"
+                    "User"
                 ],
-                "parameters": [
-                    {
-                        "enum": [
-                            "tr",
-                            "en",
-                            "ar"
-                        ],
-                        "type": "string",
-                        "description": "Response Language",
-                        "name": "response-language",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
+                "summary": "Delete User Account",
                 "responses": {
                     "204": {
                         "description": "No Content"
@@ -548,22 +517,10 @@
                     "application/json"
                 ],
                 "tags": [
-                    "3- User"
+                    "User"
                 ],
                 "summary": "Update User Account",
                 "parameters": [
-                    {
-                        "enum": [
-                            "tr",
-                            "en",
-                            "ar"
-                        ],
-                        "type": "string",
-                        "description": "Response Language",
-                        "name": "response-language",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "description": "Update User Account Request",
                         "name": "request",
@@ -600,22 +557,10 @@
                     "application/json"
                 ],
                 "tags": [
-                    "3- User"
+                    "User"
                 ],
                 "summary": "Forgot Password",
                 "parameters": [
-                    {
-                        "enum": [
-                            "tr",
-                            "ar",
-                            "en"
-                        ],
-                        "type": "string",
-                        "description": "Response Language",
-                        "name": "response-language",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "description": "Forgot Password Request",
                         "name": "request",
@@ -657,22 +602,10 @@
                     "application/json"
                 ],
                 "tags": [
-                    "3- User"
+                    "User"
                 ],
                 "summary": "Change User Password",
                 "parameters": [
-                    {
-                        "enum": [
-                            "tr",
-                            "ar",
-                            "en"
-                        ],
-                        "type": "string",
-                        "description": "Response Language",
-                        "name": "response-language",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "description": "Change User Password Request",
                         "name": "request",
@@ -720,7 +653,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "3- User"
+                    "User"
                 ],
                 "summary": "Get Current User",
                 "responses": {
@@ -752,22 +685,10 @@
                     "application/json"
                 ],
                 "tags": [
-                    "3- User"
+                    "User"
                 ],
                 "summary": "Reset Password",
                 "parameters": [
-                    {
-                        "enum": [
-                            "tr",
-                            "en",
-                            "ar"
-                        ],
-                        "type": "string",
-                        "description": "Response Language",
-                        "name": "response-language",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "description": "Reset Password Request",
                         "name": "request",
@@ -809,23 +730,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "3- User"
+                    "User"
                 ],
                 "summary": "Send Verification Email",
-                "parameters": [
-                    {
-                        "enum": [
-                            "tr",
-                            "en",
-                            "ar"
-                        ],
-                        "type": "string",
-                        "description": "Response Language",
-                        "name": "response-language",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "204": {
                         "description": "No Content"
@@ -852,22 +759,10 @@
                     "application/json"
                 ],
                 "tags": [
-                    "3- User"
+                    "User"
                 ],
                 "summary": "Verify user email",
                 "parameters": [
-                    {
-                        "enum": [
-                            "tr",
-                            "en",
-                            "ar"
-                        ],
-                        "type": "string",
-                        "description": "Response Language",
-                        "name": "response-language",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "description": "Verify Email Request",
                         "name": "request",
@@ -943,25 +838,6 @@
             "type": "object",
             "properties": {
                 "token": {
-                    "type": "string"
-                }
-            }
-        },
-        "domain.Error": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "integer"
-                },
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "healthcheck.HealthcheckResponse": {
-            "type": "object",
-            "properties": {
-                "status": {
                     "type": "string"
                 }
             }
@@ -1159,12 +1035,6 @@
             "type": "apiKey",
             "name": "Authorization",
             "in": "header"
-        },
-        "JWTAuth": {
-            "description": "JWT cookie obtained from login endpoint",
-            "type": "apiKey",
-            "name": "jwt",
-            "in": "cookie"
         }
     }
 }
